--- a/index.html
+++ b/index.html
@@ -7,5 +7,16 @@
     <title>Home Page</title>
   </head>
   <body>
+    <div class="grid-container">
+      <header>
+<div class="navbar">
+      <div class="typed-out">MULTIMEDIA DESIGNER</div>
+      <div class="navbar-right">
+        <a class="active" href="#home">WORK</a>
+        <a href="contact.html">CONTACT</a>
+      </div>
+    </div>
+        
+      </header>
   </body>
 </html>
