--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <div class="grid-container">
       <header>
-<div class="navbar">
+<div class="header">
       <div class="typed-out">MULTIMEDIA DESIGNER</div>
-      <div class="navbar-right">
+      <div class="header-right">
         <a class="active" href="#home">WORK</a>
         <a href="contact.html">CONTACT</a>
       </div>
