--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <div class="header">
       <div class="typed-out">MULTIMEDIA DESIGNER</div>
       <div class="header-right">
-        <a class="active" href="#home">WORK</a>
-        <a href="contact.html">CONTACT</a>
+        <a class="active" href="#home">CONTACT</a>
+        <a href="contact.html">HOME</a>
       </div>
     </div>
       </header>
