--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     </div>
     <div class="paragraph">
       <h5>
+       <strong>Hi There</strong> 
+        <br>
+        <br>
         My name is Jaliah and I am a multimedia designer delighted<br>
         to share that I recently earned my bachelor's degree in<br>
         interactive media from Florida International University.<br>
@@ -31,8 +34,7 @@
         <br>
         Based in Atlanta, Georgia.
       </h5>
-    </div>
-      
+    </div>   
 </main>
 
       
